crates/uitest/fixtures/ty/def/trait_impl_implied_assoc_bound.snap
---
source: crates/uitest/tests/ty.rs
expression: diags
input_file: fixtures/ty/def/trait_impl_implied_assoc_bound.fe
---
error[2-0002]: `Item` is not found
   ┌─ trait_impl_implied_assoc_bound.fe:13:37
   │
13 │ impl<T: AssocStrong> Foo for Box<T::Item> {}
   │                                     ^^^^ `Item` is not found

error[2-0002]: `Item` is not found
   ┌─ trait_impl_implied_assoc_bound.fe:24:17
   │
24 │     type X = T::Item
   │                 ^^^^ `Item` is not found
